--- a/scriptie/bachproef/asynchroon.tex
+++ b/scriptie/bachproef/asynchroon.tex
@@ -9,10 +9,9 @@ Bij het schrijven van code maakt de ontwikkelaar keuzes over de achterliggende u
 
 Het uitvoeren van een stuk code is een proces. Wanneer gekozen wordt om een stuk code synchroon of sequentieel te laten verlopen, wordt gewacht op de uitkomst van dit proces vooraleer een nieuw proces kan gestart worden. Hierbij wordt elk proces afgewerkt en enkel wanneer een bepaald proces afgewerkt is, kan een ander proces gestart worden. 
 
-Wanneer gekozen wordt om asynchroon of parallel te werken, wacht men niet op de uitkomst van een ander proces maar start dit proces ongeacht. Hierbij zijn dus meerdere processen op hetzelfde moment actief. Hier worden verschillende processen afgehandeld op verschillende threads. Een thread kan beschouwd worden als een rijstrook op de autosnelweg, er zijn verschillende threads waarop verschillende processen tegelijkertijd kunnen uitgevoerd worden, net zoals op de verschillende rijstroken meerdere auto’s tegelijkertijd kunnen rijden.
+Wanneer gekozen wordt om asynchroon of parallel te werken, worden processen niet eerst afgerond voor volgende processen kunnen beginnen. Het tweede proces in de wachtrij hoeft dan niet te wachten tot het eerste proces voltooid is alvorens te kunnen beginnen. Hierbij zijn dus meerdere processen op hetzelfde moment actief. Hier worden verschillende processen afgehandeld op verschillende threads. Een thread kan beschouwd worden als een rijstrook op de autosnelweg, er zijn verschillende threads waarop verschillende processen tegelijkertijd kunnen uitgevoerd worden, net zoals op de verschillende rijstroken meerdere auto’s tegelijkertijd kunnen rijden.
 
-De documentatie van Google-ontwikkelaars zegt over UI-thread en niet-UI-bewerkingen:
-Terwijl een schermupdate plaatsvindt, probeert het systeem om de 16 ms een blok UI code uit te voeren om soepel te renderen met 60 frames per seconde. Om het systeem dit doel te laten bereiken, moet de UI/View-hiërarchie worden bijgewerkt in de main thread. Als de wachtrij van de main thread echter taken bevat die te lang zijn om de update snel genoeg te voltooien, moet de app dit werk naar een andere thread verplaatsen. Als de main thead het uitvoeren van blokken code niet binnen 16 ms kan voltooien, kan de gebruiker haperingen, vertragingen of een gebrek aan UI-respons op invoer waarnemen. Als de main thread gedurende ongeveer vijf seconden blokkeert, geeft het systeem een dialoogvenster Application Not Responding (ANR) weer, zodat de gebruiker de app direct kan sluiten.
+In de documentatie van Google over UI-threads en niet-UI-bewerkingen staat: Terwijl een schermupdate plaatsvindt, probeert het systeem om de 16 ms een blok UI code uit te voeren om soepel te renderen met 60 frames per seconde. Om het systeem dit doel te laten bereiken, moet de UI/View-hiërarchie worden bijgewerkt in de main thread. Als de wachtrij van de main thread echter taken bevat die te lang zijn om de update snel genoeg te voltooien, moet de app dit werk naar een andere thread verplaatsen. Als de main thead het uitvoeren van blokken code niet binnen 16 ms kan voltooien, kan de gebruiker haperingen, vertragingen of een gebrek aan UI-respons op invoer waarnemen. Als de main thread gedurende ongeveer vijf seconden blokkeert, geeft het systeem een dialoogvenster Application Not Responding (ANR) weer, zodat de gebruiker de app direct kan sluiten.
 
 Dus voor bepaalde taken zoals het ophalen en persisteren van data wordt vaak gekozen voor asynchrone taken. Op zowel Android als Flutter zijn verschillende manieren aanwezig om taken asynchroon uit te voeren. In dit hoofdstuk worden de meest gebruikte manieren aangehaald.\newpage
 
@@ -22,7 +21,7 @@ Binnen asynchroon programmeren komen een aantal termen vaak terug. Zo zijn de vi
 Toegang krijgen tot dezelfde gegevens vanuit meerdere threads, het juiste gedrag en goede prestaties behouden, is de echte uitdaging van \textit{concurrent} programmeren. De beste gegevensstructuur die kan gebruikt worden om veilig gegevens over verschillende threads te delen, zijn wachtrijen. Threads communiceren meestal via wachtrijen en ze kunnen handelen als producent of consument. Een producent is een thread die informatie in de wachtrij plaatst, terwijl de consument degene is die ze leest en gebruikt. Een wachtrij kan gezien worden als een lijst waarin producenten gegevens aan het einde toevoegen, terwijl consumenten ze van het begin afnemen en lezen. Deze logica is wel beter bekend onder de naam FIFO (First In First Out). Threads plaatsen dus gegevens in de wachtrij. Deze gegevens worden ook wel berichten genoemd en zij bevatten de te delen informatie.
 
 \subsection{Android}
-In Android worden de grootste concepten bekeken rond asynchroon programmeren. Dit zijn heus niet alle opties, gewoon degene die het vaakst voorkomen. 
+In Android worden de grootste concepten bekeken rond asynchroon programmeren. Dit zijn niet alle opties, alleen die die het meest gebruikt worden. 
 
 \subsection{Flutter}
 In Flutter worden 5 concepten bekeken. Eerst en vooral hebben we futures, de manier van asynchroon werken binnen Flutter. Hierbinnen wordt nog een onderscheid gemaakt tussen futures met en zonder callbacks. Vervolgens hebben we de widgets die samenwerken met deze futures namelijk StatefulWidget, StreamBuilder en FutureBuilder. Deze widgets maken het mogelijk om de UI aan te passen wanneer het resultaat van een future of stream. \newpage
@@ -183,7 +182,7 @@ http.get("https://example.com").then((response) {
 });
 \end{lstlisting}
 
-Het codevoorbeeld toont het klassieke patroon voor het consumeren van een future. De aanroep naar http.get() retourneert een onvolledige Future-instantie. Onthoud dat het verkrijgen van resultaten via HTTP tijd kost, en het is ongewest dat de app niet reageert in deze periode. Daarom wordt de future meteen terug gehaald en wordt verder gegaan met het uitvoeren van de andere regels code. Die andere regels gebruiken de methode then() van de Future-instantie om een callback te registreren die wordt uitgevoerd wanneer het REST-antwoord binnenkomt. Als het uiteindelijke antwoord een HTTP-statuscode van 200 (succes) heeft, wordt een eenvoudig bericht in de debug-console getoond.
+Het codevoorbeeld toont het klassieke patroon voor het consumeren van futures. De aanroep naar http.get() retourneert een onvolledige future. Onthoud dat het verkrijgen van resultaten via HTTP tijd kost, en het is ongewenst dat de app niet reageert in deze periode. Daarom wordt de future meteen terug gehaald en wordt verder gegaan met het uitvoeren van de andere regels code. Die andere regels gebruiken de methode then() van de Future-instantie om een callback te registreren die wordt uitgevoerd wanneer het antwoord binnenkomt.
 
 \textbf{async en await}\\
 Dart biedt een alternatief patroon voor het maken van asynchrone calls, een patroon dat meer op gewone synchrone code lijkt, waardoor het gemakkelijker te lezen en te volgen is. De async/wait-syntaxis regelt veel van de logistiek van futures voor u:
