--- a/scriptie/bachproef/complexiteit.tex
+++ b/scriptie/bachproef/complexiteit.tex
@@ -5,6 +5,7 @@
 
 \chapter{\IfLanguageName{dutch}{Code Complexiteit}{Code Complexity}}
 \label{ch:complexiteit}
+In dit hoofdstuk werd gekeken naar de complexiteit van de geschreven code. Dit schetst namelijk een goed beeld van de toegankelijkheid van de taal. Hier wordt een onderscheid gemaakt tussen de syntax van de taal, de gebruikte built-in functionaliteit en de documentatie hiervan. Code complexiteit gaat in vele gevallen gepaard met het aantal lijnen code. Eerst en vooral is het niet altijd beter om alles in één beknopte lijn code te schrijven. Het is zo dat bij het schrijven van applicaties, vaak samengewerkt wordt met anderen aan dezelfde code. Complexe code is moeilijker om lezen en kan soms verkeerd geïnterpreteerd worden. Het is dus niet verkeerd om soms een extra lijn code te schrijven voor de complexiteit te verminderen. Echter moet hier een gezonde middenweg in gezocht worden aangezien veel lijnen code ook voor een complexe codebase kan zorgen.
 
 \section{Opzet}
 \section{Resultaten}
