--- a/scriptie/bachproef/security.tex
+++ b/scriptie/bachproef/security.tex
@@ -9,7 +9,7 @@ Security of beveiliging is vandaag de dag meer dan enkel een hot topic. Het is e
 
 In dit hoofdstuk worden een aantal best practices aangehaald. Het is niet mogelijk om ze allemaal te noemen, dus werd een lijst gemaakt van de belangrijkste. Hierbij wordt ook vermeld hoe deze best practices geïmplementeerd worden op zowel native Android als Flutter apps.\newpage
 
-\section{Maatregelen}
+\section{Best-practices}
 \textbf{Bewaar gegevens op een veilige manier}\\
 De persoonlijke informatie van de veilige opslaggebruiker mag alleen op het apparaat blijven staan als dat nodig is, en alleen toegankelijk worden gemaakt voor geautoriseerde gebruikers en processen. API-toegangstokens moeten bijvoorbeeld veilig op het apparaat worden opgeslagen. Android Keystore biedt de mogelijkheid om cryptografische sleutels in een container op te slaan, waardoor het moeilijker wordt voor ongeautoriseerde toegang.
 
