--- a/scriptie/bachproef/tooling.tex
+++ b/scriptie/bachproef/tooling.tex
@@ -12,15 +12,75 @@ Nu is het mogelijk om een aantal extra commando’s te installeren die deel uitm
 
 Dit hoofdstuk onderzoek de verschillende commando’s van de Flutter tool en vergelijkt deze met de verschillende Android tools en hun gelijkende commando’s.
 
+\section{Opzet}
+Een Software Development Kit (SDK) is een verzameling softwareontwikkelingstools in één installeerbaar pakket. Ze vergemakkelijken het maken van applicaties door een compiler, debugger en misschien een softwareframework te bevatten. Ze zijn normaal gesproken specifiek voor een combinatie van hardwareplatform en besturingssysteem. Een SDK voorziet een set tools, bibliotheken, relevante documentatie, codevoorbeelden, processen en/of handleidingen waarmee ontwikkelaars softwaretoepassingen op een specifiek platform kunnen maken. 
+
+
 \section{Android}
 De Android SDK bestaat uit meerdere tools die nodig zijn voor app-ontwikkeling. De tools kunnen geinstalleerd en bijgewerkt worden met SDK Manager van Android Studio of de command line tool ‘sdkmanager’. Alle tools worden gedownload naar de Android SDK-map. Aangezien de aard van het onderzoek een vergelijkende studie is werden hier enkel de commando’s aangehaald met een Flutter tegengestelde. Het aanhalen van alle commando’s voor elke tool zou te veel en niet interessant zijn.
+
+\newpage
+
+    \begin{tabular}{ |p{3cm}|p{11cm}|  }
+        \hline
+        \multicolumn{2}{|c|}{\textbf{Android SDK Command-Line Tools}} \\
+        \multicolumn{2}{|c|}{(android\_sdk/cmdline-tools/version/bin/)} \\
+        \hline
+        apkanalyzer & Provides insight into the composition of your APK after the build process completes.\\
+        \hline
+        avdmanager & Allows you to create and manage Android Virtual Devices (AVDs) from the command line. \\
+        \hline
+        lint & A code scanning tool that can help you to identify and correct problems with the structural quality of your code. \\
+        \hline
+        retrace & For applications compiled by R8, retrace decodes an obfuscated stack trace that maps back to your original source code.\\
+        \hline
+        sdkmanager & Allows you to view, install, update, and uninstall packages for the Android SDK.\\
+        \hline
+    \end{tabular}
+
+    \begin{tabular}{ |p{3cm}|p{11cm}|  }
+    \hline
+    \multicolumn{2}{|c|}{\textbf{Android SDK Build Tools}} \\
+    \multicolumn{2}{|c|}{(android\_sdk/build-tools/version/)} \\
+    \hline
+    \multicolumn{2}{|c|}{This package is required to build Android apps. Most of the tools in here are invoked} \\
+    \multicolumn{2}{|c|}{by the build tools and not intended for you.} \\
+    \hline
+    aapt2 & Parses, indexes, and compiles Android resources into a binary format that is optimized for the Android platform and packages the compiled resources into a single output.\\
+    \hline
+    apksigner & Signs APKs and checks whether APK signatures will be verified successfully on all platform versions that a given APK supports.\\
+    \hline
+    zipalign & Optimizes APK files by ensuring that all uncompressed data starts with a particular alignment relative to the start of the file.\\
+    \hline
+\end{tabular}
+
+
+    \begin{tabular}{ |p{3cm}|p{11cm}|  }
+    \hline
+    \multicolumn{2}{|c|}{\textbf{Android SDK Command-Line Tools}} \\
+    \multicolumn{2}{|c|}{(android\_sdk/cmdline-tools/version/bin/)} \\
+    \hline
+    apkanalyzer & Provides insight into the composition of your APK after the build process completes.\\
+    \hline
+    avdmanager & Allows you to create and manage Android Virtual Devices (AVDs) from the command line. \\
+    \hline
+    lint & A code scanning tool that can help you to identify and correct problems with the structural quality of your code. \\
+    \hline
+    retrace & For applications compiled by R8, retrace decodes an obfuscated stack trace that maps back to your original source code.\\
+    \hline
+    sdkmanager & Allows you to view, install, update, and uninstall packages for the Android SDK.\\
+    \hline
+\end{tabular}
+
+
+\newpage
 
 \section{Flutter}
 De Flutter command-line tool is hoe ontwikkelaars (en IDE’s aangestuurd door ontwikkelaars) omgaan met Flutter. 
 
-Een Software Development Kit (SDK) is een verzameling softwareontwikkelingstools in één installeerbaar pakket. Ze vergemakkelijken het maken van applicaties door een compiler, debugger en misschien een softwareframework te bevatten. Ze zijn normaal gesproken specifiek voor een combinatie van hardwareplatform en besturingssysteem. Een SDK voorziet een set tools, bibliotheken, relevante documentatie, codevoorbeelden, processen en/of handleidingen waarmee ontwikkelaars softwaretoepassingen op een specifiek platform kunnen maken. 
+Voor het kunnen werken met Flutter moet dus eerst de Flutter SDK geïnstalleerd worden. Deze SDK bevat onder andere een aantal commando’s die kunnen uitgevoerd worden in de terminal. Flutter commando’s worden voorafgegaan door het flutter keyword. Zo weet het besturingssysteem dat een commando wordt gebruikt van de flutter tool.
 
-Voor het kunnen werken met Flutter moet dus eerst de Flutter SDK geinstalleerd worden. Deze SDK bevat onder andere een aantal commando’s die kunnen uitgevoerd worden in de terminal. Flutter commando’s worden voorafgegaan door het flutter keyword. Zo weet het besturingssysteem dat een commando wordt gebruikt van de flutter tool.
+%%pub get & dart commando's
 
 Hieronder staat een lijst met de mogelijke flutter commando’s.
 
