--- a/scriptie/bachproef/voorwoord.tex
+++ b/scriptie/bachproef/voorwoord.tex
@@ -11,4 +11,6 @@
 %% waarom jij het onderwerp wil bespreken.
 %% Vergeet ook niet te bedanken wie je geholpen/gesteund/... heeft
 
-\lipsum[1-2]
+Deze bachelorproef werd voltooid in kader van de opleiding Toegepaste Informatica met specialisatie mobiele applicaties. Mijn nieuwsgierigheid naar cross-platform development samen met mijn passie voor Android leidde tot de keuze voor dit onderwerp. Dit onderzoek heeft mij veel bijgeleerd over de onderliggende werking van beide platformen alsook verschillende programmeerconcepten. Dit bracht mij een stap dichter bij de volwaardige programmeur die ik na deze opleiding wens te worden.
+
+Graag zou ik van dit voorwoord ook nog gebruik willen maken om een aantal mensen te bedanken. Eerst en vooral zou ik Navaron Bracke willen bedanken. Zijn kennis, hulp en feedback werden enorm geapprecieerd en hielpen mij een andere kijk werpen op het onderzoek. Vervolgens zou ik mevrouw Akin willen bedanken voor de tijd en moeite die zij stak in het lezen en verbeteren van deze bachelorproef. Ook wil ik Next Apps bedanken voor het voorleggen van het onderwerp. De kennis die zij mij bijbrachten over Android was van grote hulp tijdens dit onderzoek. Daarnaast wil ik Kilian Hoefman persoonlijk bedanken voor de hulp bij dit onderzoek maar ook voor de steun doorheen de jaren. Tot slot wil ik mijn vrienden en familie bedanken voor alle hulp en steun doorheen deze opleiding. Deze mensen hielpen deze Bachelorproef vormen tot wat hij nu is.
