--- a/scriptie/bachproef/conclusie.tex
+++ b/scriptie/bachproef/conclusie.tex
@@ -14,5 +14,22 @@
 % Heeft het onderzoek geleid tot nieuwe vragen die uitnodigen tot verder 
 %onderzoek?
 
-\lipsum[1-2]
+% Trek een duidelijke conclusie, in de vorm van een antwoord op de onderzoeksvra(a)g(en). Wat was jouw bijdrage aan het onderzoeksdomein en hoe biedt dit meerwaarde aan het vakgebied/doelgroep?
 
+Al is het moeilijk om te laten uit blijken of Flutter al een volwaardige tegenstander is voor Android. Indien een grotere app ontwikkeld wordt met complexe features kan dit pas bekeken worden.
+
+Voor simpele applicaties met weinig complexe features lijkt het daarom wel de beste optie. Echter wanneer een ontwikkelaar wilt groeien en bijleren zal hij al snel stoten op de werkelijkheid van het framework. De kennis over native Android en iOS hoeft echter niet uitgebreid te zijn. Maar Flutter vergt wel kennis over onderliggende Frameworks wanneer men uitgebreidere Flutter apps begint te ontwikkelen 
+
+
+% Reflecteer kritisch over het resultaat. Had je deze uitkomst verwacht? Zijn er zaken die nog niet duidelijk zijn?
+
+Het blijft belangrijk om de omvang van de applicaties in rekening te houden.
+Ook zijn bepaalde delen van het onderzoek open voor discussie. Zo werden niet alle omgevingsvariabelen weg gehaald voor en tijdens het onderzoek. 
+
+Complexe 
+
+Deze conclusie van het onderzoek ligt in lijn met de hypotheses op de onderzoeksvragen. De literatuurstudie gaf duidelijk inzicht in het Flutter framework, hieruit kon een objectief beeld gevormd worden over de werking en de voor- en nadelen van de Flutter stack. 
+
+% Heeft het onderzoek geleid tot nieuwe vragen die uitnodigen tot verder 
+\textbf{Verder onderzoek}
+Het is noodzakelijk dat de iOS 
