--- a/scriptie/bachproef/cpu.tex
+++ b/scriptie/bachproef/cpu.tex
@@ -23,19 +23,19 @@ Zie tabel \ref{table:cpu}
             \hline
             & \textbf{Android} & \textbf{Flutter}\\
             \hline
-            \textbf{Hoogst} & \% & \%\\
+            \textbf{Hoogst} & 33.6\% & 35.4\%\\
             \hline
-            \textbf{Laagst} & \% & \%\\
+            \textbf{Laagst} & 1.0\% & 1.0\%\\
             \hline
-            \textbf{Mediaan} & \% & \%\\
+            \textbf{Gemiddeld} & 12.7\% & 13.2\%\\
             \hline
-            \textbf{Gemiddeld} & \% & \%\\
-            \hline
-            \textbf{Standaard afwijking} & \% & \%\\
+            \textbf{Standaard afwijking} & 7.5146739\% & 8.1725839\%\\
             \hline
         \end{tabular}
     \end{center}
 \end{table}
 
+\subsection{Discussie}
+Bij dit onderzoekscriterium werd geen evolutie over tijd toegevoegd omdat het CPU gebruik van de app afhankelijk is van achterliggende features. In dit onderzoek konden twee gelijkaardige apps, gemaakt met verschillende stacks, wel op een relatief eerlijke manier vergeleken worden. Echter wanneer een evolutie over tijd toegevoegd wordt, moeten de cijfers op een correcte manier vergelijkbaar zijn. Op deze manier is alleen de parameter tijd een variabele.
 
-Tabel \ref{table:cpu} laat zien dat Flutter en Android in dit criterium niet veel van elkaar verschillen. De Flutter applicatie had een lager maximaal CPU-gebruik, maar de native Android had een lagere gemiddelde waarde en beide hadden dezelfde laagste waarde. De Android-applicaties hadden over het algemeen in het begin hoge CPU-prestaties.
+Het woord 'relatief' dat in vorige paragraaf gebruikt werd slaat op de uitvoering van het onderzoek. De apps werden manueel doorlopen en bevindingen werden elke halve seconde genoteerd. Echter zijn hier te veel variabelen. De tijd gespendeerd op één scherm is elke keer verschillend. De resultaten die hieruit voortkomen zijn in grote mate vergelijkbaar maar werden niet op volledig dezelfde manier bekomen. Voor een correcte vergelijking moest een script gebruikt worden. Dit zou de menselijke error elimineren. 
