--- a/scriptie/bachproef/performantie.tex
+++ b/scriptie/bachproef/performantie.tex
@@ -14,9 +14,12 @@ Het is dus belangrijk om een performante app te ontwikkelen maar het gebruikte f
 \input{uitvoeringsbestanden}
 \input{opstartsnelheid}
 \input{cpu}
+\newpage
 
 \section{Conclusie}
 \label{sec:perfConclusie}
 bij grotere Flutter APK’s wordt het verschil klein en insignificant.
 
 Wat uit deze resultaten kan geconcludeerd worden is dat een duidelijk verschil is tussen enerzijds de native APK’s en de cross-platform APK’s. Het is namelijk zo dat native APK’s aanzienlijk kleiner zijn in vergelijking met hun cross-platform tegenhangers.
+
+Het testen op CPU-verschillen in de applicaties toonde aan dat er niet veel verschil was in CPU-gebruik tussen native Android builds en Flutter builds. Dit zou het gevolg kunnen zijn van het gebruik van een kleine applicatie. Het experiment zou andere resultaten kunnen opleveren als dit deel van het onderzoek op een grotere applicatie werd uitgevoerd.
