--- a/scriptie/bachproef/samenvatting.tex
+++ b/scriptie/bachproef/samenvatting.tex
@@ -23,3 +23,19 @@
 \chapter*{\IfLanguageName{dutch}{Samenvatting}{Abstract}}
 Vier jaar geleden werd Flutter uitgebracht door Google. In deze vier jaar werd Flutter de meest gebruikte cross-platform ontwikkelings-stack. Het overtreft zijn concurrentie, sommige die al meer als 10 jaar bestaan. 
 
+% - Context: waarom is dit werk belangrijk?
+
+
+% - Nood: waarom moest dit onderzocht worden?
+
+% - Taak: wat heb je precies gedaan?
+
+% - Object: wat staat in dit document geschreven?
+
+% - Resultaat: wat was het resultaat?
+
+% - Conclusie: wat is/zijn de belangrijkste conclusie(s)?
+
+% - Perspectief: blijven er nog vragen open die in de toekomst nog kunnen
+%    onderzocht worden? Wat is een mogelijk vervolg voor jouw onderzoek?
+Echter zijn na dit onderzoek niet alle vragen beantwoord. 
